<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->

    <string name="app_name">Freezer</string>
    <string name="app_name_full">Freezer Manager</string>

    <!-- MainActivity -->

    <string name="main_action_sort">Sort</string>
    <string name="main_action_filter">Filter</string>
    <string name="main_action_settings">Settings</string>
    <string name="main_pick_sort">Sort by</string>
    <string name="main_no_items">Once you add food,\n you\'ll see it listed here</string>
    <string name="main_snackbar_defrost">\u0020defrosted</string>
    <string name="main_snackbar_defrost_undo">Undo</string>

    <string-array name="sort_options">
        <item>Name</item>
        <item>Size</item>
        <item>Freeze date</item>
        <item>Expiration date</item>
    </string-array>

    <!-- Item edit -->

    <string name="item_edit_title">Edit food</string>
    <string name="item_edit_title_create">Freeze food</string>
    <string name="item_edit_name">Name</string>
    <string name="item_edit_change_photo">Change</string>
    <string name="item_edit_freeze_date">Freeze date</string>
    <string name="item_edit_exp_date">Expiration date</string>
    <string name="item_edit_section_label">Section %1$d</string>
    <string name="item_edit_category">Category</string>
    <string name="item_edit_insert_name">Please insert a name</string>
    <string name="item_edit_done">Done</string>

    <!-- Item detail -->

    <string name="item_detail_size">%1$s:</string>
    <string name="item_detail_freeze_date">Freeze date:</string>
    <string name="item_detail_exp_date">Expiration date:</string>
    <string name="item_detail_section">Section:</string>
    <string name="item_detail_category">Category:</string>
    <string name="item_detail_edit">Edit</string>

    <!-- Settings -->

    <string name="title_activity_settings">Settings</string>

    <string name="pref_header_layout">Freezer layout</string>
    <string name="pref_title_sections">Number of sections</string>

    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_notification_expiration">Notify before expiration</string>
    <string-array name="pref_before_exp_titles">
        <item>@string/three_days</item>
        <item>@string/one_week</item>
        <item>@string/two_weeks</item>
        <item>@string/three_weeks</item>
        <item>@string/four_weeks</item>
        <item>@string/never</item>
    </string-array>
    <string-array name="pref_before_exp_values" translatable="false">
        <item>3</item>
        <item>7</item>
        <item>14</item>
        <item>21</item>
        <item>28</item>
        <item>-1</item>
    </string-array>
    <string name="three_days">3 days</string>
    <string name="one_week">1 week</string>
    <string name="two_weeks">2 weeks</string>
    <string name="three_weeks">3 weeks</string>
    <string name="four_weeks">4 weeks</string>
    <string name="never">Never</string>
    <string name="pref_title_ringtone">Notification sound</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_notification_before">upfront</string>

    <!-- Units -->

    <string name="mass">oz</string>
    <string name="volume">fl oz</string>
    <string name="pieces">pc.</string>
    <string name="mass_label">Weight</string>
    <string name="volume_label">Volume</string>
    <string name="pieces_label">Quantity</string>

    <!-- Categories -->

    <string name="meat">Meat</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="fish">Fish</string>
    <string name="pastry">Pastry</string>
    <string name="roll">Roll</string>
    <string name="fast_food">Fast food</string>
    <string name="ice_cream">Ice cream</string>
    <string name="other">Other</string>

    <!-- Notifications -->

    <string name="notification_channel">Expiration</string>
    <string name="notification_expires_today">%1$s expires today.</string>
    <string name="notification_has_expired_today">%1$s expired today.</string>
    <plurals name="notification_expires">
        <item quantity="one">%1$s expires tomorrow.</item>
        <item quantity="other">%1$s expires in %2$d days.</item>
    </plurals>
    <plurals name="notification_has_expired">
        <item quantity="one">%1$s expired yesterday.</item>
        <item quantity="other">%1$s expired %2$d days ago.</item>
    </plurals>

</resources>
