<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_header_layout"
        android:key="pref_layout">

        <EditTextPreference
            android:key="layout_sections"
            android:title="@string/pref_title_sections"
            android:defaultValue="5"
            android:numeric="integer" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_header_notifications"
        android:key="pref_notifications">

        <!-- A 'parent' preference, which enables/disables child preferences (below)
             when checked/unchecked. -->
        <ListPreference
            android:defaultValue="14"
            android:entries="@array/pref_before_exp_titles"
            android:entryValues="@array/pref_before_exp_values"
            android:key="notification_expiration"
            android:title="@string/pref_title_notification_expiration" />

        <!-- Allows the user to choose a ringtone in the 'notification' category. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:key="notification_expiration_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:key="notification_expiration_vibrate"
            android:title="@string/pref_title_vibrate" />

    </PreferenceCategory>
</PreferenceScreen>